# innate-aiswitcher

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  go.mod  go.sum  main.go
cc-switch-mini/: Taskfile.yml
cc-switch-mini/go-cc-switch-mini/: go.mod  main.go
cc-switch-mini/rust-cc-switch-mini/: Cargo.toml
cc-switch-mini/rust-cc-switch-mini/src/: circuit_breaker.rs  config.rs  main.rs  proxy.rs  state.rs  templates.rs  terminal.rs  transform.rs  tui.rs  usage.rs
cmd/mock-provider/: main.go
docs/: AGENT_TESTING.md  API.md  DEVELOPMENT.md  GOAL.md  SPEC.md  USAGE.md
docs/tutorial/: HERMES_DEEPSEEK_PROXY.md  INSTALL_GUIDE.md  install-all-agents.sh
internal/adapter/: adapter.go  adapter_test.go
internal/app/: app.go
internal/configfile/: configfile.go  configfile_test.go
internal/httpcheck/: check.go  check_test.go
internal/projectconfig/: projectconfig.go  projectconfig_test.go
internal/safefile/: safefile.go  safefile_test.go
internal/store/: models.go  store.go
internal/templates/: templates.go  templates_test.go
internal/templates/files/: config.example.toml  provider-presets.toml  providers.toml
internal/tui/: tui.go
migrations/: 1780565700_init_aisw.go  1780567200_seed_kimi_agent.go  1780567300_add_provider_endpoints.go  1780567400_seed_hermes_openclaw_agents.go  1780992004_add_skip_permissions_to_agents.go
