[package]
name = "cc-switch-mini"
description = "Minimal CC Switch - Local proxy for LLM provider routing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
dialoguer = "0.11"
console = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "cc-switch-mini"
path = "src/main.rs"
